完成首页的设置

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,20 @@
 <div class="footer">
     <nav class="nav_bar">
         <ul>
-            <li class="copyright">
-                © 2019
-            </li>
+            
             {% if site.statement %}
             <li>
-                {{ site.statement }}
+                Copyright ©  {{ site.statement }}
             </li>
             {% endif %}
+        </ul>
+
+        <ul>
+            {% if site.aq %}
+            <li>
+                {{ site.aq }}
+            </li>
+            {% endif %}
+        </ul>
     </nav>
-    </ul>
 </div>
