--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
                 {% endif %}
                 <!-- email -->
                 {% if site.email != ""%}
-                    <a class="header_btn" href="mailto://{{ site.email }}">
+                    <a class="header_btn" href="mailto:{{ site.email }}">
                         <i class="fa fa-envelope-square">
                             {% if page.btn_text != false %}
                                 <p class="btn_text">Email</p>
