备案超链接

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
         <ul>
             {% if site.aq %}
             <li>
-                {{ site.aq }}
+                <a href="{{ site.aqlink }}">{{ site.aq }}</a>
             </li>
             {% endif %}
         </ul>
