去除绝对路径 使用相对路径

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
     {% endif %}
   </title>
   <!-- icon -->
-  <link href="{{site.url }}{{site.baseurl}}{{site.assets_path}}/img/favicon.ico?" rel="shortcut icon bookmark" type="image/x-icon" />
+  <link href="{{site.assets_path}}/img/favicon.ico?" rel="shortcut icon bookmark" type="image/x-icon" />
   <!-- main stylesheet -->
   <link rel="stylesheet" href="{{site.assets_path}}/css/main.css" type="text/css" />
   <!-- fa 5.9.0 -->
