--- a/_includes/list_of_articles.html
+++ b/_includes/list_of_articles.html
@@ -12,7 +12,7 @@
     <tbody>
         {% for post in site.posts %}
         </tr>
-        <td class="td_title"><a href="{{post.url}}">{{post.title}}</a></td>
+        <td class="td_title"><a href="{{site.url}}{{post.url}}">{{post.title}}</a></td>
         <td class="td_date">{{post.date | date: "%b %d, %y"}}</td>
         <td class="td_category">{{post.category}}</td>
         </tr>
