--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
                 class="li_left">
                 <!-- home -->
                 {% if page.home_btn != false %}
-                    <a class="header_btn" href="">
+                    <a class="header_btn" href="/">
                         <i class="fa fa-home">
                             {% if page.btn_text != false %}
                                 <p class="btn_text">Home</p>
