--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -190,7 +190,7 @@ $blk-timing-function: cubic-bezier(0.98, -0.23, 0.65, 0.7);
               }
             }
             .td_date {
-              max-width: 100px;
+              width: 10%
             }
             .td_category {
               max-width: 150px;
