--- a/_includes/post_info.html
+++ b/_includes/post_info.html
@@ -10,7 +10,7 @@
   {% if page.date %}
   <span>
     <i class="fa fa-calendar"></i>
-    {{ page.date | date: "%b %d, %Y" }}
+    {{ page.date | date: "%Y/%m/%d" }}
   </span>
   {% endif %}
   <!-- category -->
